; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_scan_subtree_for_deletion.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_scan_subtree_for_deletion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.index_state*, i8*, i8*, i32*, i32*, i32, i32**, i32*)* @scan_subtree_for_deletion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scan_subtree_for_deletion(i8* %0, %struct.index_state* %1, i8* %2, i8* %3, i32* %4, i32* %5, i32 %6, i32** %7, i32* %8) #0 {
  %10 = alloca i8*, align 8
  %11 = alloca %struct.index_state*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32**, align 8
  %18 = alloca i32*, align 8
  store i8* %0, i8** %10, align 8
  store %struct.index_state* %1, %struct.index_state** %11, align 8
  store i8* %2, i8** %12, align 8
  store i8* %3, i8** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32 %6, i32* %16, align 4
  store i32** %7, i32*** %17, align 8
  store i32* %8, i32** %18, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
